--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -27,6 +27,7 @@ jobs:
                 git config --global user.email "3197339958@qq.com"
                 git config --global user.name "youcs233"
                 git checkout vercelcdn
+                mkdir -p gh/youcs233
                 cd gh/youcs233
                 rm -rf blog-img
                 git clone https://github.com/youcs233/blog-img.git
