--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -31,7 +31,7 @@ jobs:
           cd gh/youcs233
 
           rm -rf blog-img
-          git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/youcs233/blog-img.git
+          git clone https://${{ secrets.BLOG_TOKEN }}@github.com/youcs233/blog-img.git
           cd blog-img
           rm -rf .git
 
